# MiniMarket24

./: .env.example  .gitignore  ARCHITECTURAL_DECISIONS.md  BITACORA_DESARROLLO_DEMAND24.md  Caso_y_entregables_Sistema_Inteligente_de_Predicción_de_Demanda_para_Mini_Optimized.md  DEMAND24_Arquitectura_Modular_Optimized.md  FASE3_ROADMAP.md  Modelado_de_aplicación_Sistema_Inteligente_de_Predicción_de_Demanda_para_Mini-Market_Optimized.md  NEXT_SESSION_PROMPT.md  PROJECT_STATUS.py  QUICK_START_NEXT_SESSION.md  README.md  SRS_MINIMARKET_DETALLADO_Optimized.md  coverage.xml  implementation_plan.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  sonarcloud.yml
Documents/: BITACORA_DESARROLLO_DEMAND24.md  implementation_plan.md
backend/: requirements.txt
backend/config/: settings.py
logica_negocio/: __init__.py
logica_negocio/tests/: __init__.py  conftest.py  test_evaluation_fold_repository.py  test_model_version_repository.py  test_prediction_repository.py  test_predictor_persistence.py  test_schemas.py  test_sku_repository.py
modulo_analitico/: __init__.py  predictor.py
modulo_analitico/config/: __init__.py  ml_config.py
modulo_analitico/data_adapter/: __init__.py  aggregator.py  feature_builder.py  loader.py
modulo_analitico/models/: __init__.py  metrics.py  xgboost_model.py
modulo_analitico/tests/: __init__.py  test_aggregator_extended.py  test_config_utils.py  test_coverage_booster.py  test_data_adapter.py  test_data_aggregator.py  test_evaluator.py  test_loader.py  test_metrics.py  test_predictor.py  test_trainer.py  (+3 more)
(+22 files in other folders)
