[project]
name = "demand-24"
version = "0.1.0"
description = "Sistema Inteligente de Predicción de Demanda — MiniMarket La 24 S.A.S."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # --- API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    
    # --- Data & ML ---
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "statsmodels>=0.15.0",
    "mlflow>=2.15.0",
    
    # --- Database ---
    "sqlalchemy>=2.0.0",
    "supabase>=2.0.0",
    
    # --- Config ---
    "python-dotenv>=1.0.0",
    
    # --- Utilities ---
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["modulo_analitico/tests", "logica_negocio/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=logica_negocio --cov=modulo_analitico --cov-report=term-missing"

